--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ biocLite<span class="p">(</span><span class="kt">c</span><span class="p">(</span
 <p>To install the latest development version directly from GitHub, run in R:</p>
 
 <div class="highlight highlight-r"><pre><span class="kr">if</span> <span class="p">(</span><span class="o">!</span><span class="kn">require</span><span class="p">(</span><span class="s">"devtools"</span><span class="p">))</span> install.packages<span class="p">(</span><span class="s">"devtools"</span><span class="p">)</span>
-devtools<span class="o">::</span>install_github<span class="p">(</span><span class="s">"przemol/rbeads""</span><span class="err">)</span>
+devtools<span class="o">::</span>install_github<span class="p">(</span><span class="s">"przemol/rbeads"</span><span class="err">)</span>
 </pre></div>
 
 <h2>
