--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@ help<span class="p">(</span>rbeads<span class="p">)</span>
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/Przemol/rbeads/zipball/master" class="button">
+          <a href="https://github.com/Przemol/rbeads/releases/download/v0.3.1-alpha/rbeads.pdf" class="button">
             <small>Download</small>
-            .zip file
+            Reference manual (.pdf)
           </a>
           <a href="https://github.com/Przemol/rbeads/tarball/master" class="button">
             <small>Download</small>
