--- a/index.html
+++ b/index.html
@@ -88,12 +88,8 @@ help<span class="p">(</span>rbeads<span class="p">)</span>
 
         <aside id="sidebar">
           <a href="https://github.com/Przemol/rbeads/releases/download/v0.3.1-alpha/rbeads.pdf" class="button">
-            <small>Download</small>
-            Reference manual (.pdf)
-          </a>
-          <a href="https://github.com/Przemol/rbeads/tarball/master" class="button">
-            <small>Download</small>
-            .tar.gz file
+            <small>Reference manual</small>
+            .pdf file
           </a>
 
           <p class="repo-owner"><a href="https://github.com/Przemol/rbeads"></a> is maintained by <a href="https://github.com/Przemol">Przemol</a>.</p>
