--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ help<span class="p">(</span>rbeads<span class="p">)</span>
         </section>
 
         <aside id="sidebar">
-          <p>Download:</p>
+          <p><h3></large>Download:</h3></p>
           <a href="https://github.com/Przemol/rbeads/releases/download/v0.3.1-alpha/rbeads.pdf" class="button">
             <small>Reference manual</small>
             .pdf file
