--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ help<span class="p">(</span>rbeads<span class="p">)</span>
         </section>
 
         <aside id="sidebar">
-          <h2></large>Download:</h2>
+          <h2>Download:</h2>
           <a href="https://github.com/Przemol/rbeads/releases/download/v0.3.1-alpha/rbeads.pdf" class="button">
             <small>Reference manual</small>
             .pdf file
