--- a/index.html
+++ b/index.html
@@ -87,9 +87,8 @@ help<span class="p">(</span>rbeads<span class="p">)</span>
         </section>
 
         <aside id="sidebar">
-          <h2>Download:</h2>
           <a href="https://github.com/Przemol/rbeads/releases/download/v0.3.1-alpha/rbeads.pdf" class="button">
-            <small>Reference manual</small>
+            <small>Download manual</small>
             .pdf file
           </a>
 
