--- a/index.html
+++ b/index.html
@@ -103,13 +103,10 @@ help<span class="p">(</span>rbeads<span class="p">)</span>
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/Przemol/rbeads/zipball/master" class="button">
-            <small>Download</small>
-            .zip file
-          </a>
-          <a href="https://github.com/Przemol/rbeads/tarball/master" class="button">
-            <small>Download</small>
-            .tar.gz file
+        
+          <a href="https://github.com/Przemol/rbeads/releases/download/v0.3.1-alpha/rbeads.pdf" class="button">
+            <small>Download manual</small>
+            .pdf file
           </a>
 
           <p class="repo-owner"><a href="https://github.com/Przemol/rbeads"></a> is maintained by <a href="https://github.com/Przemol">Przemol</a>.</p>
