--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
 <p>The R implementation of <strong>B</strong>ias <strong>E</strong>limination <strong>A</strong>lgorithm for <strong>D</strong>eep <strong>S</strong>equencing.</p>
 </blockquote>
 
-<p><a href="https://travis-ci.org/Przemol/rbeads"><img src="https://travis-ci.org/Przemol/rbeads.svg?branch=master" alt="Build Status"></a></p>
+<p>
+<a href="http://dx.doi.org/10.5281/zenodo.11427"><img src="https://camo.githubusercontent.com/4ada1db4783727f274efb385a331a34cfef4ac3c/68747470733a2f2f7a656e6f646f2e6f72672f62616467652f646f692f31302e353238312f7a656e6f646f2e31313432372e706e67" alt="DOI" data-canonical-src="https://zenodo.org/badge/doi/10.5281/zenodo.11427.png" style="max-width:100%;"></a>
+<a href="https://travis-ci.org/Przemol/rbeads"><img src="https://camo.githubusercontent.com/5bedd49ec24a5570070b0d93024986967d9674fa/68747470733a2f2f7472617669732d63692e6f72672f50727a656d6f6c2f7262656164732e7376673f6272616e63683d6d6173746572" alt="Build Status" data-canonical-src="https://travis-ci.org/Przemol/rbeads.svg?branch=master" style="max-width:100%;"></a>
+</p>
 
 <p><img class="emoji" title=":exclamation:" alt=":exclamation:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/2757.png" height="20" width="20" align="absmiddle"><strong>RELEASE NOTE</strong>  <img class="emoji" title=":exclamation:" alt=":exclamation:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/2757.png" height="20" width="20" align="absmiddle"></p>
 
